[package]
name = "happy-eyeballs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
tracing = { version = "0.1", default-features = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }