[package]
name = "happy-eyeballs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
log = { version = "0.4", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
url = { version = "2.5.7", default-features = false }

[dev-dependencies]
env_logger = { version = "0.10", default-features = false }